k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
  namespace: employee-prod
  labels:
    app: employee-api
    environment: production
    tier: backend

spec:
  replicas: 3

  revisionHistoryLimit: 10

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: employee-api

  template:
    metadata:
      labels:
        app: employee-api
        environment: production
        tier: backend

    spec:

      serviceAccountName: employee-api-sa

      terminationGracePeriodSeconds: 30

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001

      nodeSelector:
        workload: application

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: employee-api
              topologyKey: kubernetes.io/hostname

      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: employee-api

      containers:
      - name: employee-api

        image: 076124125794.dkr.ecr.us-east-1.amazonaws.com/python-crud-backend:latest
        imagePullPolicy: IfNotPresent

        ports:
        - name: http
          containerPort: 5000

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"

        startupProbe:
          httpGet:
            path: /
            port: 5000
          periodSeconds: 5
          failureThreshold: 18

        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true

          capabilities:
            drop:
            - ALL

          seccompProfile:
            type: RuntimeDefault

        volumeMounts:
        - name: tmp
          mountPath: /tmp

        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - sleep 15

      volumes:
      - name: tmp
        emptyDir: {}
