k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-api
  namespace: employee-prod
  labels:
    app.kubernetes.io/name: employee-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: employee-management
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP

  selector:
    app: employee-api

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http

  sessionAffinity: None

  internalTrafficPolicy: Cluster
