k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
  namespace: employee-prod
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:076124125794:certificate/7021a7d9-52fb-4178-8219-f2754f343131

    alb.ingress.kubernetes.io/listen-ports: >
      [{"HTTP":80},{"HTTPS":443}]

    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb

  rules:
  - host: app.ajay.bar
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: employee-ui
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: employee-api
            port:
              number: 80
